<resources>
    <string name="app_name">Speechoscope</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="app_info">This is a sample application to record audio.nnTo start recording press &quot;Record&quot; button, to stop recording press &quot;Stop&quot; button.</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="play">PLAY</string>
    <string name="submit">SUBMIT</string>
</resources>
